java--/compiled/jmm.java
/* jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. jmm.java */
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.FileOutputStream;
import java.io.IOException;
import java.util.Arrays;

public class jmm/*@bgen(jjtree)*/implements jmmTreeConstants, jmmConstants {/*@bgen(jjtree)*/
  protected static JJTjmmState jjtree = new JJTjmmState();
    private static jmm parser;
    private static int optRN = -1;
    private static boolean optO = false;


    public static void main(String args []) throws ParseException, IOException{

        if(readArgs(args) == false){
            return;
        }

        SimpleNode node = parser.Program();
        node.dump("");
    }

    public static FileInputStream openFile(String filename){
        File file = new File(filename);

        FileInputStream fileStream;
        try {
            fileStream = new FileInputStream(file);
            return fileStream;
        } catch (FileNotFoundException e) {
            System.out.println("Error in file stream constructor: ");
            System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
            e.printStackTrace();
            return null;
        }
    }

    public static boolean readArgs(String args[]){
        if(args.length < 1){
            System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
            return false;
        }

        FileInputStream fileStream = openFile(args[0]);
        if(fileStream == null){
            System.out.println("File not found!");
            return false;
        }
        parser = new jmm(fileStream);

        for(int i = 1; i < args.length; i++){
            if(validArgs(args[i]) == false)
                return false;
        }
        return true;
    }

    public static boolean validArgs(String arg){
        if(arg.equals("-o")) {
            if(optO) {
                System.out.println("Error: Option O has already been defined.");
                System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
                return false;
            }
            optO = true;
        }
        else if(arg.length() < 3){
            System.out.println("Error: Non valid argument");
            System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
            return false;
        }
        else if(arg.substring(0, 3).equals("-r=")) {
            if(optRN >= 0) {
                System.out.println("Error: Option R has already been defined.");
                System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
                return false;
            }
            if(arg.substring(3).matches("[0-9]+")) {
                optRN = Integer.parseInt(arg.substring(3));
                if(optRN < 0) {
                    System.out.println("Error: The number in option R must be an integer greater or equal to 0.");
                    System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
                    return false;
                }
            }
            else {
                System.out.println("Error: The number in option R must be an integer.");
                System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
                return false;
            }
        }
        else {
            System.out.println("Error: Non valid argument");
            System.out.println("Usage: java -cp bin jmm <filePath> [-r=<n>] [-o]");
            return false;
        }
        return true;
    }

    public static void error_skipto(ParseException e, String error, int kind) {
        System.out.println("Syntatic Error on " + error + ". " + e.toString());
        Token t;
        do {
            t = getNextToken();
            if(t.kind == EOF)
                break;
        } while (t.kind != kind);
    }

  static final public SimpleNode Program() throws ParseException {
    trace_call("Program");
    try {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        ClassDeclaration();
jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
{if ("" != null) return jjtn000;}
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Program");
    }
  }

  static final public void ClassDeclaration() throws ParseException {
    trace_call("ClassDeclaration");
    try {
      try {
        jj_consume_token(CLASS);
ASTCLASS_NAME jjtn001 = new ASTCLASS_NAME(JJTCLASS_NAME);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
        try {
          Identifier();
        } catch (Throwable jjte001) {
if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, true);
                  }
        }
      } catch (ParseException e) {
System.out.println("Syntatic Error on Class initialization. " + e.toString());
      }
      ClassDeclaration_1();
    } finally {
      trace_return("ClassDeclaration");
    }
  }

  static final public void ClassDeclaration_1() throws ParseException {
    trace_call("ClassDeclaration_1");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LCHAVETA:{
        ClassDeclaration_Not_Extends();
        break;
        }
      case EXTENDS:{
        ClassDeclaration_Extends();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ClassDeclaration_1");
    }
  }

  static final public void ClassDeclaration_Not_Extends() throws ParseException {
    trace_call("ClassDeclaration_Not_Extends");
    try {/*@bgen(jjtree) #CLASS( 3) */
  ASTCLASS jjtn000 = new ASTCLASS(JJTCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        try {
          jj_consume_token(LCHAVETA);
        } catch (ParseException e) {
error_skipto(e, "Class declaration", LCHAVETA);
        }
        Vars();
        Methods();
        try {
          jj_consume_token(RCHAVETA);
        } catch (ParseException e) {
error_skipto(e, "Class declaration", RCHAVETA);
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  3);
      }
      }
    } finally {
      trace_return("ClassDeclaration_Not_Extends");
    }
  }

  static final public void ClassDeclaration_Extends() throws ParseException {
    trace_call("ClassDeclaration_Extends");
    try {/*@bgen(jjtree) #CLASS_EXTENDS( 4) */
  ASTCLASS_EXTENDS jjtn000 = new ASTCLASS_EXTENDS(JJTCLASS_EXTENDS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        try {
          jj_consume_token(EXTENDS);
ASTEXTENDED_CLASS jjtn001 = new ASTEXTENDED_CLASS(JJTEXTENDED_CLASS);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
          try {
            Identifier();
          } catch (Throwable jjte001) {
if (jjtc001) {
                      jjtree.clearNodeScope(jjtn001);
                      jjtc001 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte001 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte001;}
                    }
                    if (jjte001 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte001;}
                    }
                    {if (true) throw (Error)jjte001;}
          } finally {
if (jjtc001) {
                      jjtree.closeNodeScope(jjtn001, true);
                    }
          }
          jj_consume_token(LCHAVETA);
        } catch (ParseException e) {
error_skipto(e, "Class declaration", LCHAVETA);
        }
        Vars();
        Methods();
        try {
          jj_consume_token(RCHAVETA);
        } catch (ParseException e) {
error_skipto(e, "Class declaration", RCHAVETA);
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  4);
      }
      }
    } finally {
      trace_return("ClassDeclaration_Extends");
    }
  }

  static final public void Methods() throws ParseException {
    trace_call("Methods");
    try {/*@bgen(jjtree) METHODS */
  ASTMETHODS jjtn000 = new ASTMETHODS(JJTMETHODS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PUBLIC:{
            ;
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          jj_consume_token(PUBLIC);
          ClassDeclaration_Methods();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("Methods");
    }
  }

  static final public void Vars() throws ParseException {
    trace_call("Vars");
    try {/*@bgen(jjtree) VAR_DECLS */
  ASTVAR_DECLS jjtn000 = new ASTVAR_DECLS(JJTVAR_DECLS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case INT_ARRAY:
          case BOOLEAN:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            break label_2;
          }
          VarDeclaration();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("Vars");
    }
  }

  static final public void ClassDeclaration_Methods() throws ParseException {
    trace_call("ClassDeclaration_Methods");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STATIC:{
        MainDeclaration();
        break;
        }
      case INT:
      case INT_ARRAY:
      case BOOLEAN:
      case IDENTIFIER:{
        MethodDeclaration();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ClassDeclaration_Methods");
    }
  }

  static final public void VarDeclaration() throws ParseException {
    trace_call("VarDeclaration");
    try {/*@bgen(jjtree) #VAR_DECL( 2) */
  ASTVAR_DECL jjtn000 = new ASTVAR_DECL(JJTVAR_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Type();
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
             boolean jjtc001 = true;
             jjtree.openNodeScope(jjtn001);
        try {
          Identifier();
        } catch (Throwable jjte001) {
if (jjtc001) {
               jjtree.clearNodeScope(jjtn001);
               jjtc001 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte001 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte001;}
             }
             if (jjte001 instanceof ParseException) {
               {if (true) throw (ParseException)jjte001;}
             }
             {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
               jjtree.closeNodeScope(jjtn001, true);
             }
        }
        jj_consume_token(PVIRG);
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  2);
      }
      }
    } finally {
      trace_return("VarDeclaration");
    }
  }

  static final public void Vars_Statement() throws ParseException {
    trace_call("Vars_Statement");
    try {/*@bgen(jjtree) METHOD_BODY */
  ASTMETHOD_BODY jjtn000 = new ASTMETHOD_BODY(JJTMETHOD_BODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Vars_Statement_Aux();
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("Vars_Statement");
    }
  }

  static final public void Vars_Statement_Aux() throws ParseException {
    trace_call("Vars_Statement_Aux");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case INT_ARRAY:
      case BOOLEAN:{
        Type_1();
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
        try {
          Identifier();
        } catch (Throwable jjte001) {
if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001, true);
               }
        }
ASTVAR_DECL jjtn002 = new ASTVAR_DECL(JJTVAR_DECL);
                                        boolean jjtc002 = true;
                                        jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(PVIRG);
        } finally {
if (jjtc002) {
                                          jjtree.closeNodeScope(jjtn002,  2);
                                        }
        }
        Vars_Statement_Aux();
        break;
        }
      case IDENTIFIER:{
ASTIDENTIFIER jjtn003 = new ASTIDENTIFIER(JJTIDENTIFIER);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
        try {
          Identifier();
        } catch (Throwable jjte003) {
if (jjtc003) {
          jjtree.clearNodeScope(jjtn003);
          jjtc003 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte003 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte003;}
        }
        if (jjte003 instanceof ParseException) {
          {if (true) throw (ParseException)jjte003;}
        }
        {if (true) throw (Error)jjte003;}
        } finally {
if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
        }
        Vars_Statement_1();
        break;
        }
      case WHILE:
      case IF:
      case LCHAVETA:{
        Statement_Aux();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WHILE:
          case IF:
          case LCHAVETA:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
          Statement();
        }
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Vars_Statement_Aux");
    }
  }

  static final public void Vars_Statement_1() throws ParseException {
    trace_call("Vars_Statement_1");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
ASTIDENTIFIER jjtn001 = new ASTIDENTIFIER(JJTIDENTIFIER);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
        try {
          Identifier();
        } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
        }
ASTVAR_DECL jjtn002 = new ASTVAR_DECL(JJTVAR_DECL);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(PVIRG);
        } finally {
if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002,  2);
                               }
        }
        Vars_Statement_Aux();
        break;
        }
      case NOT_OP:
      case ASSIGN:
      case LPAR:
      case DOT:
      case LPARRETO:
      case TRUE:
      case FALSE:
      case THIS:
      case NEW:
      case INTEGER:{
        Statement1();
        jj_consume_token(PVIRG);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WHILE:
          case IF:
          case LCHAVETA:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_4;
          }
          Statement();
        }
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Vars_Statement_1");
    }
  }
